--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 group 'ru.netology'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 11
+sourceCompatibility = 10
 
 compileJava.options.encoding = "UTF-8"
 compileTestJava.options.encoding = "UTF-8"
@@ -26,35 +26,15 @@ allure {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
-    implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '4.4.0'
-    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.5'
-    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0'
-    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.0'
     testImplementation 'com.codeborne:selenide:6.10.1'
-    implementation group: 'com.github.javafaker', name: 'javafaker', version: '1.0.2'
     testImplementation 'io.qameta.allure:allure-selenide:2.20.0'
+    testImplementation 'mysql:mysql-connector-java:8.0.30'
     testImplementation 'org.postgresql:postgresql:42.5.1'
     testImplementation 'commons-dbutils:commons-dbutils:1.7'
-    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.30'
-    testImplementation 'org.projectlombok:lombok:1.18.24'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
-
-//    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
-//    testImplementation 'com.codeborne:selenide:6.10.1'
-//    testImplementation 'mysql:mysql-connector-java:8.0.30'
-//    testImplementation 'org.postgresql:postgresql:42.5.1'
-//    testImplementation 'commons-dbutils:commons-dbutils:1.7'
-//    testImplementation 'io.rest-assured:rest-assured:5.3.0'
-//    testImplementation 'com.google.code.gson:gson:2.10'
-//    testImplementation 'commons-dbutils:commons-dbutils:1.7'
-//    testImplementation 'io.qameta.allure:allure-selenide:2.20.0'
-//    implementation group: 'com.github.javafaker', name: 'javafaker', version: '1.0.2'
-//    implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '4.4.0'
-//    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0'
-//    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.0'
-//    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.30'
+    testImplementation 'io.rest-assured:rest-assured:5.3.0'
+    testImplementation 'io.qameta.allure:allure-rest-assured:2.20.0'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
 }
-
 
 test {
     useJUnitPlatform()
